# battery-takeover

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  btake  build_macos_installer.sh  control.sh  install_agent_launchd.sh  install_desktop_app.sh  pyproject.toml  uninstall_agent_launchd.sh  uninstall_desktop_app.sh  调研-开源与产品基线.md
.github/workflows/: build-macos-installer.yml
config/: default.toml
docs/: release-page.html  产品文档.md  分享文案.md  升级规划-v0.3.0.md  发布说明-v0.1.0.md  发布说明-v0.2.0.md  发布说明-v0.2.1.md  小红书发布文案.md  少数派发布文案.md  开发日志.md
launchd/: com.battery.takeover.agent.plist
packaging/macos/: postinstall
src/battery_takeover/: agent.py  cli.py  collector.py  config.py  dashboard.py  models.py  notifier.py  policy.py  report.py  storage.py
src/battery_takeover/executors/: __init__.py  base.py  batt_exec.py  battery_exec.py  noop_exec.py
tasks/: lessons.md
tests/: test_collector.py  test_config_update.py  test_dashboard.py  test_policy.py  test_release_workflow.py  test_report.py
